fix(popup-toolbar): avoid title overflowing container and hiding buttons (DEJS-1143)

--- a/projects/deja-js/component/popup/component/popup-toolbar/popup-toolbar.component.scss
+++ b/projects/deja-js/component/popup/component/popup-toolbar/popup-toolbar.component.scss
@@ -30,6 +30,8 @@
     .deja-popup-toolbar-spacer {
         flex: 1;
         cursor: grab;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
         .mat-icon {
             vertical-align: sub;
